--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>ThoseWhoShare</h1>
-    <form action="" id="signin">
+    <form class="form" action="" id="signin">
       <input type="text" name="username" id="username" />
       <input type="text" name="password" id="password" />
       <button type="submit">Signin</button>
