--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
   <body>
     <h1>ThoseWhoShare</h1>
     <form class="form" action="" id="signin">
-      <input type="text" name="username" id="username" />
-      <input type="text" name="password" id="password" />
-      <button type="submit">Signin</button>
+      <h1>Signin Form</h1>
+      <div class="form-groups">
+        <input
+          type="text"
+          name="username"
+          id="username"
+          placeholder="Enter your username"
+        />
+      </div>
+      <div class="form-groups">
+        <input
+          type="text"
+          name="password"
+          id="password"
+          placeholder="Enter your password"
+        />
+      </div>
+      <div class="button-group">
+        <button type="submit">Signin</button>
+      </div>
+      <p>Forgotten your password?</p>
     </form>
   </body>
 </html>
