--- a/index.html
+++ b/index.html
@@ -7,29 +7,38 @@
     <link rel="stylesheet" href="stylings.css" />
   </head>
   <body>
-    <h1>ThoseWhoShare</h1>
-    <form class="form" action="" id="signin">
-      <h1>Signin Form</h1>
-      <div class="form-groups">
-        <input
-          type="text"
-          name="username"
-          id="username"
-          placeholder="Enter your username"
-        />
+    <div class="container">
+      <div class="left-contents">
+        <h2>Welcome to ThoseWhoShare.</h2>
+        <p>
+          Connect with friends, share moments and explore new content everyday.
+        </p>
+        <p>Signin to view posts from your friends and family.</p>
       </div>
-      <div class="form-groups">
-        <input
-          type="text"
-          name="password"
-          id="password"
-          placeholder="Enter your password"
-        />
-      </div>
-      <div class="button-group">
-        <button type="submit">Signin</button>
-      </div>
-      <p>Forgotten your password?</p>
-    </form>
+
+      <form class="form" action="" id="signin">
+        <h1>ThoseWhoShare</h1>
+        <div class="form-groups">
+          <input
+            type="text"
+            name="username"
+            id="username"
+            placeholder="Enter your username"
+          />
+        </div>
+        <div class="form-groups">
+          <input
+            type="text"
+            name="password"
+            id="password"
+            placeholder="Enter your password"
+          />
+        </div>
+        <div class="button-group">
+          <button type="submit">Signin</button>
+        </div>
+        <p>Forgotten your password?</p>
+      </form>
+    </div>
   </body>
 </html>
