--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="../src/css/stylings.css" />
   </head>
   <body>
+    <div class="left-contents">
+      <h2>Welcome to ThoseWhoShare.</h2>
+      <p>
+        Connect with friends, share moments and explore new content everyday.
+      </p>
+      <p>Signin to view posts from your friends and family.</p>
+    </div>
     <div class="container">
-      <div class="left-contents">
-        <h2>Welcome to ThoseWhoShare.</h2>
-        <p>
-          Connect with friends, share moments and explore new content everyday.
-        </p>
-        <p>Signin to view posts from your friends and family.</p>
-      </div>
-
-      <form class="form" action="" id="signin">
+      <form action="" id="signin">
         <h1>ThoseWhoShare</h1>
         <div class="form-groups">
           <input
