--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
         <p>Forgotten your password?</p>
       </form>
     </div>
+    <script src="../src/js/signinformvalid.js"></script>
   </body>
 </html>
