--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThoseWhoShare</title>
     <link rel="stylesheet" href="../src/css/stylings.css" />
+    <link rel="stylesheet" href="../src/css/navbar.css" />
   </head>
   <body>
+    <nav class="navbar">
+      <a href="home.html" class="logo">ThoseWhoShare</a>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="posts.html">Posts</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="index.html">Logout</a></li>
+      </ul>
+    </nav>
     <div class="left-contents">
       <h2>Welcome to ThoseWhoShare.</h2>
       <p>
