--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <div class="button-group">
           <button type="submit">Signin</button>
         </div>
-        <p>Forgotten your password?</p>
+        <a href="/forgot-password.html" class="forgot-password">Forgotten your password?</a>
       </form>
     </div>
     <script src="../src/js/signinformvalid.js"></script>
